# RGBD_POSE_SOCKT

./: CMakeLists.txt  package.xml  package.xml~  readme.txt
data/: pose.txt
launch/: room.launch  rrbot_rviz.launch  srbot.rviz  srbot_rviz.launch  vscan_world.launch  vscan_world_5.launch  vscan_world_launch_backup_cafe_scene
models/: room.sdf
srbot_description/: rgb_backup  rgbd_backup  srbot0 (copy).urdf  srbot0.urdf  srbot1.urdf  srbot2.urdf  srbot3.urdf  srbot4.urdf  srbot_backup
srbot_gazebo/: srbot.launch
src/: OpenNIEngine.cpp  OpenNIEngine.h  imageCallback.h  img2map.cpp  img_geter.cpp  img_geter.cpp~  move_client.cpp  move_controller.cpp  octo_navi.cpp  poseCallback.h  slam_test.cpp  socket.h  socket_server.cpp  turtle_tf_listener.cpp
src/backup/: socket_server.cpp
worlds/: cust0.world  cust1.world  cust2.world  cust3.world  cust4.world  e.world  large.world  mp1.world  mp2.world  p1.world  p2.world  r1.world  r2.world  scene0.world  scene2.world  scene3.world  scene4.world  scene5.sdf  suncg0.world  suncg1.world  suncg2.world  suncg3.world  vscan.world  vscan_backup
