<?xml version="1.0"?>
<package>
  <name>socket_img</name>
  <version>0.0.0</version>
  <description>The virtual_scan package</description>
  <maintainer email="bamboosdu@gmail.com">zhouqiang</maintainer>
  <license>TODO</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>octomap</build_depend>
<build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>octomap</run_depend>
   <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
 

  </export>
</package>
